<resources>
    <string name="app_name">BluetoothCommon</string>
    <string name="action_settings">Settings</string>

    <!-- 下拉刷新listView -->
    <string name="pull_to_refresh_pull_label">向下拖动刷新</string>
    <string name="string_update_time">最后更新：%s</string>
    <string name="string_refreshing">扫描蓝牙中…</string>
    <string name="scan_over">扫描結束</string>
    <string name="release_to_refresh_pull_label">松开立即刷新</string>
    <string name="loading_error">点击加载</string>
    <string name="loading_wait">正在获取更多…</string>
    <string name="click_for_loading_more">点击加载更多</string>
    <string name="all_has_show">已显示全部内容</string>

    <string name="list_click">点击屏幕,重新加载</string>
    <string name="list_empty">暂无数据</string>

    <string name="devices">设备列表</string>

    <string name="connecting">正在连接</string>

    <string name="x_to_zero">X 0 &#8592;</string>
    <string name="x_out_zero">X 0 &#8594;</string>
    <string name="y_to_zero">Y 0 &#8592;</string>
    <string name="y_out_zero">Y 0 &#8594;</string>
    <string name="xy_reset">X+Y 复位</string>
    <string name="direct">直接</string>
    <string name="relative">相对</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
</resources>
