<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_debug_rect_bg"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/shape_temp_text_bg"
                    android:ems="5"
                    android:inputType="number"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="1000" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="16dp"

                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_relative"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/relative" />

                    <RadioButton
                        android:id="@+id/rb_direct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/direct" />
                </RadioGroup>

                <Button
                    android:id="@+id/tv_reset_xy"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/style_button_bg"
                    android:gravity="center"
                    android:text="@string/xy_reset"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp">

                        <Button
                            android:id="@+id/btn_x_to_zero"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_marginEnd="8dp"
                            android:background="@drawable/style_button_bg"
                            android:gravity="center"
                            android:text="@string/x_to_zero"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            tools:ignore="ButtonStyle" />

                        <Button
                            android:id="@+id/btn_x_out_zero"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:background="@drawable/style_button_bg"
                            android:gravity="center"
                            android:text="@string/x_out_zero"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            tools:ignore="ButtonStyle" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_y_to_zero"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_marginEnd="8dp"
                            android:background="@drawable/style_button_bg"
                            android:gravity="center"
                            android:text="@string/y_to_zero"
                            android:textColor="@android:color/black"
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/btn_y_out_zero"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:background="@drawable/style_button_bg"
                            android:gravity="center"
                            android:text="@string/y_out_zero"
                            android:textColor="@android:color/black"
                            android:textSize="16sp"
                            tools:ignore="ButtonStyle" />
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_tired"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/style_button_bg"
                    android:gravity="center"
                    android:text="传动老化"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    tools:ignore="ButtonStyle" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_debug_rect_bg"
            android:orientation="horizontal"
            android:padding="8dp">

            <include
                layout="@layout/view_scroll_rb"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="end"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@drawable/style_button_bg"
                    android:gravity="center"
                    android:text="@string/open"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/style_button_bg"
                    android:gravity="center"
                    android:text="@string/close"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_temp_text_bg"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_x_zero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="X 零位" />

                <RadioButton
                    android:id="@+id/rb_y_zero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Y 零位" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="#"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_read"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/style_button_bg"
                android:gravity="center"
                android:text="读取"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>